--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ https://templatemo.com/tm-550-diagoona
 -->
 </head>
 
-<body style="background-image: url(/img/diagoona-bg-1.jpg);">
+<body style="background-image: url(img/diagoona-bg-1.jpg);">
     <div class="tm-container">
         <div>
             <div class="tm-row pt-4">
